--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="background.js"></script>
+    <script src="background.js"></script>
 </head>
 <body>
 </body>
